[DDW-541] PDF generator

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -203,6 +203,7 @@
   "notification.downloadQRCodeImageSuccess": "Address: <strong>{walletAddress}</strong> QR code image successfully downloaded",
   "notification.downloadRewardsCSVSuccess": "CSV file successfully downloaded",
   "notification.downloadTransactionsCSVSuccess": "CSV file successfully downloaded",
+  "notification.downloadVotingPDFSuccess": "PDF successfully downloaded",
   "paper.wallet.create.certificate.completion.dialog.addressCopiedLabel": "copied",
   "paper.wallet.create.certificate.completion.dialog.addressInstructions": "To receive funds to your paper wallet simply share your wallet address with others.",
   "paper.wallet.create.certificate.completion.dialog.addressLabel": "Wallet address",
@@ -645,6 +646,11 @@
   "voting.votingRegistration.enterPinCode.step.errors.invalidRepeatPinCode": "Pin doesn't match",
   "voting.votingRegistration.enterPinCode.step.reminder": "<span>Please, don’t forget your PIN.</span> In case you forget your PIN you will not be able to use this registration for voting and you will need to go through the registration process again.",
   "voting.votingRegistration.enterPinCode.step.repeatPinCodeLabel": "Repeat the PIN",
+  "voting.votingRegistration.pdf.author": "Daedalus wallet",
+  "voting.votingRegistration.pdf.filename": "voting-registration",
+  "voting.votingRegistration.pdf.networkLabel": "Cardano network:",
+  "voting.votingRegistration.pdf.title": "Fund{fundNumber} Voting Registration",
+  "voting.votingRegistration.pdf.walletNameLabel": "Wallet name",
   "voting.votingRegistration.qrCode.step.checkbox1Label": "I understand that I will not be able to get this QR code again after closing this window.",
   "voting.votingRegistration.qrCode.step.checkbox2Label": "I acknowledge that I need to have the downloaded PDF with the QR code to be able to vote with Fund3",
   "voting.votingRegistration.qrCode.step.closeButtonLabel": "Close",
