--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -203,6 +203,7 @@
   "notification.downloadQRCodeImageSuccess": "アドレス：<strong>{walletAddress}</strong> QRコードの画像をダウンロードしました",
   "notification.downloadRewardsCSVSuccess": "CSVファイルのダウンロードが完了しました",
   "notification.downloadTransactionsCSVSuccess": "CSVファイルのダウンロードが完了しました",
+  "notification.downloadVotingPDFSuccess": "PDFをダウンロードしました",
   "paper.wallet.create.certificate.completion.dialog.addressCopiedLabel": "コピーされました",
   "paper.wallet.create.certificate.completion.dialog.addressInstructions": "ペーパーウォレットを用いて資金を受け取るには、ウォレットアドレスを共有してください。",
   "paper.wallet.create.certificate.completion.dialog.addressLabel": "ウォレットアドレス",
@@ -645,6 +646,11 @@
   "voting.votingRegistration.enterPinCode.step.errors.invalidRepeatPinCode": "PINコードが一致しません",
   "voting.votingRegistration.enterPinCode.step.reminder": "!!!<span>Please, don’t forget your PIN.</span> In case you forget your PIN you will not be able to use this registration for voting and you will need to go through the registration process again.",
   "voting.votingRegistration.enterPinCode.step.repeatPinCodeLabel": "!!!Repeat the PIN",
+  "voting.votingRegistration.pdf.author": "Daedalusウォレット",
+  "voting.votingRegistration.pdf.filename": "有権者登録",
+  "voting.votingRegistration.pdf.networkLabel": "Cardanoネットワーク：",
+  "voting.votingRegistration.pdf.title": "FUND{fundNumber}有権者登録",
+  "voting.votingRegistration.pdf.walletNameLabel": "ウォレット名",
   "voting.votingRegistration.qrCode.step.checkbox1Label": "!!!I understand that I will not be able to get this QR code again after closing this window.",
   "voting.votingRegistration.qrCode.step.checkbox2Label": "!!!I acknowledge that I need to have the downloaded PDF with the QR code to be able to vote with Fund3",
   "voting.votingRegistration.qrCode.step.closeButtonLabel": "!!!Close",
