[DDW-521] Translations and improvements

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -10510,7 +10510,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Transaction metadata is not moderated and may contain inappropriate content. Lorem ipsum dolor sit amet.",
+        "defaultMessage": "!!!Transaction metadata is not moderated and may contain inappropriate content.",
         "description": "Transaction metadata disclaimer",
         "end": {
           "column": 3,
