--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -968,6 +968,9 @@
   "wallet.transaction.filter.resultInfo": "<b>{filtered}</b> out of <b>{total}</b> transactions match your filter.",
   "wallet.transaction.filter.selectTimeRange": "Select time range",
   "wallet.transaction.filter.thisYear": "This year",
+  "wallet.transaction.metadataConfirmationLabel": "Show unmoderated content",
+  "wallet.transaction.metadataDisclaimer": "Transaction metadata is not moderated and may contain inappropriate content.",
+  "wallet.transaction.metadataLabel": "Transaction metadata",
   "wallet.transaction.noInputAddressesLabel": "No addresses",
   "wallet.transaction.pending.cancelPendingTxnNote": "This transaction has been pending for a long time. To release the funds used by this transaction, you can try canceling it.",
   "wallet.transaction.pending.cancelPendingTxnSupportArticle": "Why should I cancel this transaction?",
