DDW-500 Implement design for native tokens - Adding Assets store and api request methods

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -1031,6 +1031,7 @@
   "wallet.summary.page.tokenSendButton": "Send",
   "wallet.summary.page.tokensTitle": "Assets",
   "wallet.summary.page.transactionsLabel": "Number of transactions",
+  "wallet.summary.page.unknownLabel": "Unknown",
   "wallet.summary.page.yesterdayLabel": "Yesterday",
   "wallet.transaction.address.from": "From address",
   "wallet.transaction.address.to": "To address",
