[DDW-149] Implement undelegate wallet dialog on wallet settings screen

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -922,6 +922,24 @@
   "wallet.settings.setWalletPassword.dialog.setPasswordMessage": "ウォレットを安全に保ち、Daedalus で使用するためには、送信時パスワードの設定が必要です。",
   "wallet.settings.setWalletPassword.dialog.setPasswordTitle": "このウォレットは送信時パスワードで保護されていません",
   "wallet.settings.showQRCode": "QRコードを表示する",
+  "wallet.settings.undelegate.dialog.calculatingFees": "手数料を計算しています",
+  "wallet.settings.undelegate.dialog.confirmButtonLabel": "委任設定を解除する",
+  "wallet.settings.undelegate.dialog.confirmIneligibleNotice": "ステークを委任していないと、報酬を得られないことを理解しました。",
+  "wallet.settings.undelegate.dialog.confirmUnsupportNotice": "ステークを委任していないと、Cardanoネットワークをサポートできないことを理解しました。",
+  "wallet.settings.undelegate.dialog.descriptionWithTicker": "<p><strong>{walletName}</strong>ウォレットのステークは現在<strong>[{stakePoolTicker}] {stakePoolName}</strong>ステークプールに委任されています。</p><p>ステークの委任を解除し、報酬獲得を停止しますか。</p>",
+  "wallet.settings.undelegate.dialog.descriptionWithUnknownTicker": "<p><strong>{walletName}</strong>ウォレットのステークは現在<strong>{stakePoolTicker}</strong>ステークプールに委任されています。</p><p>ステークの委任を解除して報酬の獲得を停止しますか。</p>",
+  "wallet.settings.undelegate.dialog.feesLabel": "手数料",
+  "wallet.settings.undelegate.dialog.passwordError": "送金時パスワードが間違っています。",
+  "wallet.settings.undelegate.dialog.spendingPasswordLabel": "送信時パスワード",
+  "wallet.settings.undelegate.dialog.spendingPasswordPlaceholder": "送金時パスワードを入力して下さい",
+  "wallet.settings.undelegate.dialog.title": "ウォレットの委任設定を解除する",
+  "wallet.settings.undelegate.dialog.unknownStakePoolLabel": "不明の",
+  "wallet.settings.undelegate.result.dialog.description1": "<strong>{walletName}</strong>ウォレットのステークは現在委任されておらず、まもなくこのウォレットへの報酬は停止されます。",
+  "wallet.settings.undelegate.result.dialog.description2": "新しい委任設定はブロックチェーンに送信され、<strong>現行のCardanoエポックと次のエポックが{timeUntilNextEpochStart}後に終了となり次第有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
+  "wallet.settings.undelegate.result.dialog.title": "ウォレットの委任設定が解除されました",
+  "wallet.settings.undelegateWallet.header": "ウォレットの委任設定を解除する",
+  "wallet.settings.undelegateWallet.warning": "このウォレットの使用を停止し、すべての資金を移す場合には、まず委任設定を解除し、デポジットの2ADAを回収してください。ウォレットの委任設定を解除後、3Cardanoエポック間は委任報酬が継続します。",
+  "wallet.settings.undelegateWalletButtonLabel": "ウォレットの委任設定を解除する",
   "wallet.settings.utxos.description": "このウォレットには、<b>{walletUtxosAmount}のUTXO</b>（未使用トランザクションアウトプット)に<b>{formattedWalletAmount}ADA</b>が含まれています。含まれるADAの額ごとのUTXO分布状況は、下のグラフで確認できます。",
   "wallet.settings.utxos.emptyWallet": "このウォレットは空のため、UTXO（未使用トランザクションアウトプット）はありません。",
   "wallet.settings.utxos.findOutMoreLink": "もっと知る",
