--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -9334,6 +9334,245 @@
   {
     "descriptors": [
       {
+        "defaultMessage": "!!!Undelegate wallet",
+        "description": "Label for the undelegate button on wallet settings",
+        "end": {
+          "column": 3,
+          "line": 12
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletButton.js",
+        "id": "wallet.settings.undelegateWalletButtonLabel",
+        "start": {
+          "column": 9,
+          "line": 8
+        }
+      }
+    ],
+    "path": "source/renderer/app/components/wallet/settings/UndelegateWalletButton.json"
+  },
+  {
+    "descriptors": [
+      {
+        "defaultMessage": "!!!Undelegate Wallet",
+        "description": "Title for the \"Undelegate wallet\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 28
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.title",
+        "start": {
+          "column": 9,
+          "line": 24
+        }
+      },
+      {
+        "defaultMessage": "!!!Undelegate",
+        "description": "Label for the \"Undelegate\" button in the undelegate wallet dialog.",
+        "end": {
+          "column": 3,
+          "line": 34
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.confirmButtonLabel",
+        "start": {
+          "column": 22,
+          "line": 29
+        }
+      },
+      {
+        "defaultMessage": "!!!<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>[{stakePoolTicker}] {stakePoolName}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
+        "description": "Description of current delegation of wallet in the \"Undelegate wallet\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 41
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.descriptionWithTicker",
+        "start": {
+          "column": 25,
+          "line": 35
+        }
+      },
+      {
+        "defaultMessage": "!!!<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>{stakePoolTicker}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
+        "description": "Description of current delegation of wallet in the \"Undelegate wallet\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 48
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.descriptionWithUnknownTicker",
+        "start": {
+          "column": 32,
+          "line": 42
+        }
+      },
+      {
+        "defaultMessage": "!!!unknown",
+        "description": "unknown stake pool label in the \"Undelegate wallet\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 53
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.unknownStakePoolLabel",
+        "start": {
+          "column": 25,
+          "line": 49
+        }
+      },
+      {
+        "defaultMessage": "!!!I understand that I am not supporting the Cardano network when my stake is undelegated.",
+        "description": "Notice to confirm if the user understands unsupporting Cardano network after undelegation",
+        "end": {
+          "column": 3,
+          "line": 60
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.confirmUnsupportNotice",
+        "start": {
+          "column": 26,
+          "line": 54
+        }
+      },
+      {
+        "defaultMessage": "!!!I understand that I will not be eligible to earn rewards when my stake is undelegated.",
+        "description": "Notice to confirm if the user understands non-earning rewards after undelegation",
+        "end": {
+          "column": 3,
+          "line": 67
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.confirmIneligibleNotice",
+        "start": {
+          "column": 27,
+          "line": 61
+        }
+      },
+      {
+        "defaultMessage": "!!!Fees",
+        "description": "Fees label in the \"Undelegate wallet\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 72
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.feesLabel",
+        "start": {
+          "column": 13,
+          "line": 68
+        }
+      },
+      {
+        "defaultMessage": "!!!Spending password",
+        "description": "Spending password label in the \"Undelegate wallet\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 77
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.spendingPasswordLabel",
+        "start": {
+          "column": 25,
+          "line": 73
+        }
+      },
+      {
+        "defaultMessage": "!!!Type your spending password here",
+        "description": "Spending password placeholder in the \"Undelegate wallet\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 83
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.spendingPasswordPlaceholder",
+        "start": {
+          "column": 31,
+          "line": 78
+        }
+      },
+      {
+        "defaultMessage": "!!!Incorrect spending password.",
+        "description": "Label for password error in the \"Undelegate wallet\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 88
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.passwordError",
+        "start": {
+          "column": 24,
+          "line": 84
+        }
+      },
+      {
+        "defaultMessage": "!!!Calculating fees",
+        "description": "\"Calculating fees\" message in the \"Undelegate wallet\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 94
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.js",
+        "id": "wallet.settings.undelegate.dialog.calculatingFees",
+        "start": {
+          "column": 19,
+          "line": 89
+        }
+      }
+    ],
+    "path": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.json"
+  },
+  {
+    "descriptors": [
+      {
+        "defaultMessage": "!!!Wallet undelegated",
+        "description": "Title for the \"Undelegate Result\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 19
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationResultDialog.js",
+        "id": "wallet.settings.undelegate.result.dialog.title",
+        "start": {
+          "column": 9,
+          "line": 15
+        }
+      },
+      {
+        "defaultMessage": "!!!The stake from your wallet <strong>{walletName}</strong> is no longer delegated and you will soon stop earning rewards for this wallet.",
+        "description": "Description 1 for the \"Undelegate Result\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 25
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationResultDialog.js",
+        "id": "wallet.settings.undelegate.result.dialog.description1",
+        "start": {
+          "column": 16,
+          "line": 20
+        }
+      },
+      {
+        "defaultMessage": "!!!Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
+        "description": "Description 2 for the \"Undelegate Result\" dialog.",
+        "end": {
+          "column": 3,
+          "line": 31
+        },
+        "file": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationResultDialog.js",
+        "id": "wallet.settings.undelegate.result.dialog.description2",
+        "start": {
+          "column": 16,
+          "line": 26
+        }
+      }
+    ],
+    "path": "source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationResultDialog.json"
+  },
+  {
+    "descriptors": [
+      {
         "defaultMessage": "!!!Wallet public key",
         "description": "Wallet public key label.",
         "end": {
@@ -9947,13 +10186,41 @@
         "description": "Label for the \"Transaction assurance security level\" dropdown.",
         "end": {
           "column": 3,
-          "line": 29
+          "line": 31
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.assurance",
         "start": {
           "column": 23,
-          "line": 24
+          "line": 26
+        }
+      },
+      {
+        "defaultMessage": "!!!Undelegate wallet",
+        "description": "Undelegate wallet header on the wallet settings page.",
+        "end": {
+          "column": 3,
+          "line": 36
+        },
+        "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
+        "id": "wallet.settings.undelegateWallet.header",
+        "start": {
+          "column": 26,
+          "line": 32
+        }
+      },
+      {
+        "defaultMessage": "!!!If you are planning to stop using this wallet and remove all funds, you should first undelegate it to recover your 2 ada deposit. You will continue getting delegation rewards during the three Cardano epochs after undelegating your wallet.",
+        "description": "Undelegate wallet warning explaining the consequences.",
+        "end": {
+          "column": 3,
+          "line": 42
+        },
+        "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
+        "id": "wallet.settings.undelegateWallet.warning",
+        "start": {
+          "column": 27,
+          "line": 37
         }
       },
       {
@@ -9961,13 +10228,13 @@
         "description": "Delete wallet header on the wallet settings page.",
         "end": {
           "column": 3,
-          "line": 34
+          "line": 47
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.deleteWallet.header",
         "start": {
           "column": 22,
-          "line": 30
+          "line": 43
         }
       },
       {
@@ -9975,13 +10242,13 @@
         "description": "Delete wallet warning explaining the consequences.",
         "end": {
           "column": 3,
-          "line": 40
+          "line": 53
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.deleteWallet.warning1",
         "start": {
           "column": 24,
-          "line": 35
+          "line": 48
         }
       },
       {
@@ -9989,13 +10256,13 @@
         "description": "Delete wallet warning explaining the consequences.",
         "end": {
           "column": 3,
-          "line": 46
+          "line": 59
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.deleteWallet.warning2",
         "start": {
           "column": 24,
-          "line": 41
+          "line": 54
         }
       },
       {
@@ -10003,13 +10270,13 @@
         "description": "Label for the \"Name\" text input on the wallet settings page.",
         "end": {
           "column": 3,
-          "line": 51
+          "line": 64
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.name.label",
         "start": {
           "column": 8,
-          "line": 47
+          "line": 60
         }
       },
       {
@@ -10017,13 +10284,13 @@
         "description": "Label for the \"Password\" field.",
         "end": {
           "column": 3,
-          "line": 56
+          "line": 69
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.password",
         "start": {
           "column": 17,
-          "line": 52
+          "line": 65
         }
       },
       {
@@ -10031,13 +10298,13 @@
         "description": "Last updated X time ago message.",
         "end": {
           "column": 3,
-          "line": 61
+          "line": 74
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.passwordLastUpdated",
         "start": {
           "column": 23,
-          "line": 57
+          "line": 70
         }
       },
       {
@@ -10045,13 +10312,13 @@
         "description": "You still don't have password set message.",
         "end": {
           "column": 3,
-          "line": 66
+          "line": 79
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.passwordNotSet",
         "start": {
           "column": 18,
-          "line": 62
+          "line": 75
         }
       }
     ],
