--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -922,6 +922,24 @@
   "wallet.settings.setWalletPassword.dialog.setPasswordMessage": "To keep your wallet secure and start using it in Daedalus, you need to set a spending password.",
   "wallet.settings.setWalletPassword.dialog.setPasswordTitle": "Your wallet is not protected with a spending password",
   "wallet.settings.showQRCode": "Show QR code",
+  "wallet.settings.undelegate.dialog.calculatingFees": "Calculating fees",
+  "wallet.settings.undelegate.dialog.confirmButtonLabel": "Undelegate",
+  "wallet.settings.undelegate.dialog.confirmIneligibleNotice": "I understand that I will not be eligible to earn rewards when my stake is undelegated.",
+  "wallet.settings.undelegate.dialog.confirmUnsupportNotice": "I understand that I am not supporting the Cardano network when my stake is undelegated.",
+  "wallet.settings.undelegate.dialog.descriptionWithTicker": "<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>[{stakePoolTicker}] {stakePoolName}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
+  "wallet.settings.undelegate.dialog.descriptionWithUnknownTicker": "<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>{stakePoolTicker}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
+  "wallet.settings.undelegate.dialog.feesLabel": "Fees",
+  "wallet.settings.undelegate.dialog.passwordError": "Incorrect spending password.",
+  "wallet.settings.undelegate.dialog.spendingPasswordLabel": "Spending password",
+  "wallet.settings.undelegate.dialog.spendingPasswordPlaceholder": "Type your spending password here",
+  "wallet.settings.undelegate.dialog.title": "Undelegate Wallet",
+  "wallet.settings.undelegate.dialog.unknownStakePoolLabel": "unknown",
+  "wallet.settings.undelegate.result.dialog.description1": "The stake from your wallet <strong>{walletName}</strong> is no longer delegated and you will soon stop earning rewards for this wallet.",
+  "wallet.settings.undelegate.result.dialog.description2": "Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
+  "wallet.settings.undelegate.result.dialog.title": "Wallet undelegated",
+  "wallet.settings.undelegateWallet.header": "Undelegate wallet",
+  "wallet.settings.undelegateWallet.warning": "If you are planning to stop using this wallet and remove all funds, you should first undelegate it to recover your 2 ada deposit. You will continue getting delegation rewards during the three Cardano epochs after undelegating your wallet.",
+  "wallet.settings.undelegateWalletButtonLabel": "Undelegate wallet",
   "wallet.settings.utxos.description": "This wallet contains <b>{formattedWalletAmount} ADA</b> on <b>{walletUtxosAmount} UTXOs</b> (unspent transaction outputs). Examine the histogram below to see the distribution of UTXOs with different amounts of ada.",
   "wallet.settings.utxos.emptyWallet": "This wallet is empty so it does not contain any UTXOs (unspent transaction outputs).",
   "wallet.settings.utxos.findOutMoreLink": "Find out more",
